# packages/service/src/application/commands/dto/refresh-member-token.command.ts
@@ -1,0 +1,14 @@
+import { MaskLog } from '@kangjuhyup/rvlog';
+
+export class RefreshMemberTokenCommand {
+  @MaskLog({ type: 'full' })
+  readonly refreshToken: string;
+
+  private constructor(params: { refreshToken: string }) {
+    this.refreshToken = params.refreshToken;
+  }
+
+  static of(params: { refreshToken: string }): RefreshMemberTokenCommand {
+    return new RefreshMemberTokenCommand(params);
+  }
+}
